@@ -1,5 +1,11 @@
 2006-04-18  Jon Phillips <kidproto@users.sf.net>
 
+	* Makefile: Added make dist-datetime to make a snapshot of the 
+	current build so we can start having thrice-daily builds of the
+	package available on mirrors.
+
+2006-04-18  Jon Phillips <kidproto@users.sf.net>
+
 	* bin/makedoc.sh: Makes phpdoc if its installed
 
 2006-04-10     Victor Stone <fourstones@users.sourceforge.net>
